--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -124,7 +124,7 @@
       <!--Goals tagged under the Favorite Goal-->
       <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy">
         <ion-card *ngIf="favoriteGoal[1] === 'master goal' && goal[1] === 'goal' && favoriteGoal[0] === goal[4]" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
-          <ion-card-content class="ion-no-padding goal-content" *ngIf="(moment.array_boolean.length > 8) && moment.array_boolean[8]">
+          <ion-card-content class="ion-no-padding goal-content">
             <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
               <ion-textarea class=" ion-margin-start" [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
             </ion-item>
@@ -134,8 +134,8 @@
             <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
               <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
                 <span class="content-count">{{j+1}}.</span>
-                <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionBlur)="calendaritem.endDate = calendaritem.startDate; momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-datetime>
-                <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionBlur)="momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-input>
+                <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
+                <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionChange)="changeContentCalendarItem(calendaritem, 'title')" ></ion-input>
                 <ion-buttons slot="end" class="ion-no-margin">
                   <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
                   <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
@@ -143,6 +143,11 @@
                 </ion-buttons>
               </ion-item>
             </div>
+            <ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(goal)">
+              <span class="content-count"><ion-icon name="add"></ion-icon></span>
+              <div class="content-date ion-text-wrap"></div>
+              <ion-label class="moment-input" *ngIf="moment && resource">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
+            </ion-item>
           </ion-card-content>
         </ion-card>
       </div>
@@ -150,7 +155,7 @@
     <!--Goals with no valid Favorite Goal Tags-->
     <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy" >
       <ion-card *ngIf="goal[1] === 'goal' && !(null | calendar : 'checkfavoritegoaltag' : { listOfDisplayGoals: listOfDisplayGoals, goal: goal })" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
-        <ion-card-content class="goal-content ion-no-padding" *ngIf="(moment.array_boolean.length > 8) && moment.array_boolean[8]">
+        <ion-card-content class="goal-content ion-no-padding">
           <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
             <ion-textarea class="ion-margin-start" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="goal[5]" (ionInput)="touchGoal(goal, 'text')" placeholder="Goal Name"></ion-textarea>
           </ion-item>
@@ -160,8 +165,8 @@
           <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
             <ion-item class="calendar-item ion-no-padding" *ngIf="calendaritem.goals && calendaritem.goals.includes(goal[0])">
               <span class="content-count">{{j+1}}.</span>
-              <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionBlur)="calendaritem.endDate = calendaritem.startDate; momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-datetime>
-              <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionBlur)="momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-input>
+              <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
+              <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionChange)="changeContentCalendarItem(calendaritem, 'title')" ></ion-input>
               <ion-buttons slot="end" class="ion-no-margin">
                 <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
                 <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
@@ -169,6 +174,10 @@
               </ion-buttons>
             </ion-item>
           </div>
+          <ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(goal)">
+            <span class="content-count"><ion-icon name="add"></ion-icon></span>
+            <ion-label class="moment-input" *ngIf="moment && resource">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
+          </ion-item>
         </ion-card-content>
       </ion-card>
     </div>
@@ -181,8 +190,8 @@
         <div *ngFor="let calendaritem of timeline; index as j; trackBy: customTrackBy">
           <ion-item class="calendar-item ion-no-padding" *ngIf="!calendaritem.goals.length">
             <span class="content-count">{{j+1}}.</span>
-            <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionBlur)="calendaritem.endDate = calendaritem.startDate; momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-datetime>
-            <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionBlur)="momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-input>
+            <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionChange)="changeContentCalendarItem(calendaritem, 'date')"></ion-datetime>
+            <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionChange)="changeContentCalendarItem(calendaritem, 'title')"></ion-input>
             <ion-buttons slot="end" class="ion-no-margin">
               <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
               <ion-button fill="clear" color="grey" (click)="promptEditContentCalendar($event, calendaritem)"><ion-icon name="cog"></ion-icon></ion-button>
@@ -190,6 +199,10 @@
             </ion-buttons>
           </ion-item>
         </div>
+        <ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(null)">
+          <span class="content-count"><ion-icon name="add"></ion-icon></span>
+          <ion-label class="moment-input" *ngIf="moment && resource">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
+        </ion-item>
       </ion-card-content>
     </ion-card>
     <ion-item hidden>
