--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -111,7 +111,7 @@
     <div *ngFor="let favoriteGoal of listOfDisplayGoals; trackBy: customTrackBy" [hidden]="(favoriteGoal[1] === 'goal')">
       <!--Favorite Goals-->
       <ion-card mode="md" class="ion-no-padding">
-        <ion-card-content class="goal-content favorite ion-no-padding" *ngIf="(moment.array_boolean.length > 8) && moment.array_boolean[8]">
+        <ion-card-content class="goal-content favorite ion-no-padding">
           <ion-badge [ngStyle]="{'background': (favoriteGoal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: favoriteGoal } : 'color') }" class="favorite-goal-type">{{resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][6]}}</ion-badge>
           <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
             <ion-textarea class="ion-margin-start" autosize rows="1" [minRows]="1" [maxRows]="8" [(ngModel)]="favoriteGoal[5]" (ionInput)="touchGoal(favoriteGoal, 'text')" [placeholder]="resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][6]"></ion-textarea>
@@ -153,7 +153,7 @@
       </div>
     </div>
     <!--Goals with no valid Favorite Goal Tags-->
-    <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy" >
+    <div *ngFor="let goal of listOfDisplayGoals; trackBy: customTrackBy">
       <ion-card *ngIf="goal[1] === 'goal' && !(null | calendar : 'checkfavoritegoaltag' : { listOfDisplayGoals: listOfDisplayGoals, goal: goal })" [ngStyle]="{'background': (goal[3] | background : { listOfDisplayGoals: listOfDisplayGoals, goal: goal } : 'color') }" mode="md">
         <ion-card-content class="goal-content ion-no-padding">
           <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
@@ -181,8 +181,16 @@
         </ion-card-content>
       </ion-card>
     </div>
+    <ion-card mode="md" (click)="promptNewGoalName($event)">
+      <ion-card-content class="goal-content ion-no-padding">
+        <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
+          <ion-icon name="add"></ion-icon>
+          <ion-label class="ion-margin-start" >Add New Section</ion-label>
+        </ion-item>
+      </ion-card-content>
+    </ion-card>
     <!--Uncategorized-->
-    <ion-card style="background: var(--ion-color-lightgrey)" mode="md">
+    <ion-card style="background: var(--ion-color-lightgrey)" mode="md" [hidden]="!loadCompleted">
       <ion-card-content class="goal-content overall ion-no-padding">
         <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
           <ion-label class="ion-margin-start" >Uncategorized</ion-label>
@@ -211,27 +219,6 @@
         <ion-select-option *ngFor="let goal of listOfDisplayGoals" [value]="goal[0]" [class.selected]="selectCalendarItem.goals && selectCalendarItem.goals.includes(goal[0])">{{goal[5]}}</ion-select-option>
       </ion-select>
     </ion-item>
-    <!--<ion-virtual-scroll [items]="timeline" approxItemHeight="48px" *ngIf="timeline.length">
-      <ion-item *virtualItem="let calendaritem; let j = index;">
-        <span class="content-count">{{j+1}}.</span>
-        <ion-datetime class="content-date ion-text-wrap" displayFormat="MMM D, YYYY" [(ngModel)]="calendaritem.startDate" [pickerOptions]="{cssClass: 'level-15'}" (ionBlur)="calendaritem.endDate = calendaritem.startDate; momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-datetime>
-        &lt;!&ndash;<span class="content-date">{{calendaritem.startDate | datetime: 'm:s,d:n,y:n'}}</span>&ndash;&gt;
-        <ion-input class="moment-input" type="text" [(ngModel)]="calendaritem.title" (ionBlur)="momentService.touchContentCalendarItems(null, {operation: 'update calendar item', calendaritem: calendaritem })" [disabled]="!calendaritem._id"></ion-input>
-        &lt;!&ndash;<span class="moment-input" *ngIf="calendaritem.moment._id">{{calendaritem.title}}</span>&ndash;&gt;
-        <ion-buttons slot="end" class="ion-no-margin">
-          <ion-button fill="clear" color="grey" (click)="openContent($event, calendaritem)"><ion-icon name="open-outline"></ion-icon></ion-button>
-          <ion-button fill="clear" [color]="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id) ? 'grey' : 'lightgrey'" (click)="openChildActivity($event, calendaritem.moment, 'edit')" *ngIf="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id) || ['owner', 'admin', 'staff'].includes(userData.user.role)"><ion-icon name="cog"></ion-icon></ion-button>
-          &lt;!&ndash;<ion-button fill="clear" color="grey" (click)="openChildActivity($event, calendaritem.moment, 'edit')" *ngIf="calendaritem.moment.user_list_2 && calendaritem.moment.user_list_2.includes(userData.user._id)"><ion-icon name="cog"></ion-icon></ion-button>&ndash;&gt;
-          <ion-button fill="clear" (click)="removeTimelineItem($event, programId, calendaritem)" class="close-button" *ngIf="calendaritem._id"><ion-icon name="trash" color="grey"></ion-icon></ion-button>
-        </ion-buttons>
-      </ion-item>
-    </ion-virtual-scroll>-->
-    <ion-row class="ion-justify-content-center" *ngIf="this.schedule._id">
-      <ion-button (click)="addContenCalendar()" shape="round" color="primary" fill="solid" expand="full">
-        <ion-icon name="add"></ion-icon>
-        <ion-label>Add New</ion-label>
-      </ion-button>
-    </ion-row>
   </ion-list>
     <ion-list *ngIf="view === 'content'">
       <ion-item lines="none">
