--- a/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
+++ b/src/app/pages/feature/manage/feature-schedule/feature-schedule.page.html
@@ -190,7 +190,7 @@
       </ion-card-content>
     </ion-card>
     <!--Uncategorized-->
-    <ion-card style="background: var(--ion-color-lightgrey)" mode="md">
+    <ion-card style="background: var(--ion-color-lightgrey)" mode="md" *ngIf="timeline | calendar: 'calendaritemuncategorized'">
       <ion-card-content class="goal-content overall ion-no-padding">
         <ion-item lines="none" class="ion-no-padding ion-margin-end ion-padding-end goal-label">
           <ion-label class="ion-margin-start" >Uncategorized</ion-label>
@@ -207,10 +207,10 @@
             </ion-buttons>
           </ion-item>
         </div>
-        <ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(null)">
+        <!--<ion-item class="calendar-item ion-no-padding" (click)="addContenCalendar(null)">
           <span class="content-count"><ion-icon name="add"></ion-icon></span>
           <ion-label class="moment-input" *ngIf="moment && resource">Add New {{(moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)].length > 2) ? moment.matrix_string[moment.resource.matrix_number[0].indexOf(10210)][2] : resource['en-US'].matrix_string[resource.matrix_number[0].indexOf(10210)][15]}}</ion-label>
-        </ion-item>
+        </ion-item>-->
       </ion-card-content>
     </ion-card>
     <ion-item hidden>
