--- a/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.scss
+++ b/src/app/pages/feature/manage/feature-curriculum/feature-curriculum.page.scss
@@ -46,6 +46,14 @@ app-feature-curriculum {
     margin-left: 15px;
   }
 
+  .goal-content.favorite {
+    padding-top: 15px;
+  }
+
+  .goal-label {
+    --background: var(--ion-color-secondary);
+  }
+
   .more-goal-options {
     position: absolute;
     top: 5px;
