added journey card IDs

--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -144,7 +144,7 @@
             <!--Journey Mobile View-->
             <ion-slides class="program-slides" [options]="{slidesPerView: 2.2, grabCursor: true, updateOnWindowResize: true}" *ngIf="journeys && journeys.length && platform.width() < 768">
               <ion-slide class="program-slide" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
-                <ion-card class="program-card" (click)="openProgram($event, journey)">
+                <ion-card id="journey-card" class="program-card" (click)="openProgram($event, journey)">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
                       <img class="program-photo" [src]="(journey.assets && journey.assets.length && journey.assets[0]) | background: journey._id" />
@@ -158,7 +158,7 @@
             <ion-grid *ngIf="journeys && journeys.length && platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
                 <ion-col class="ion-align-self-center" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))" size="auto">
-                  <ion-card class="grid-program-card" (click)="openProgram($event, journey)">
+                  <ion-card id="journey-card" class="grid-program-card" (click)="openProgram($event, journey)">
                     <ion-card-header class="ion-no-padding">
                       <div class="program-photo-container">
                         <img class="program-photo" [src]="(journey.assets && journey.assets.length && journey.assets[0]) | background: journey._id" />
