create chat now creates Activity type
1.8.16 (1)

--- a/src/app/pages/connect/myconversations/myconversations.page.scss
+++ b/src/app/pages/connect/myconversations/myconversations.page.scss
@@ -3,6 +3,10 @@ app-myconversations {
     height: 100%;
   }
 
+  ion-virtual-scroll {
+    cursor: pointer;
+  }
+
   ion-menu-toggle {
     ion-badge {
       position: relative;
