--- a/src/app/pages/connect/createchat/createchat.page.html
+++ b/src/app/pages/connect/createchat/createchat.page.html
@@ -3,38 +3,24 @@
     <ion-buttons slot="start">
     <ion-button (click)="backButton()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title>{{title}}</ion-title>
+    <ion-title *ngIf="!totalSelected || totalSelected < 2">Create Chat</ion-title>
+    <ion-title *ngIf="totalSelected >= 2">Create Group</ion-title>
   </ion-toolbar>
   <ion-toolbar>
-    <div *ngIf="page === 1">
+    <div>
       <ion-searchbar [(ngModel)]="searchKeyword" debounce="500" (ionChange)="executeSearch($event)" (ionCancel)="cancelSearch($event)"></ion-searchbar>
       <div class="selected-buttons">
         <ion-button size="small" *ngFor="let person of selectedAppUsers" (click)="unselect(person)">{{person.name}}<ion-icon name="close-circle" style="margin-left: 5px;"></ion-icon></ion-button>
       </div>
       <form *ngIf="displayGroup" [formGroup]="chatForm">
         <ion-item>
-          <ion-label position="stacked">Chat Name *</ion-label>
+          <ion-label position="stacked">
+            <span *ngIf="!totalSelected || totalSelected < 2">Chat </span>
+            <span *ngIf="totalSelected >= 2">Group </span>
+            Name *</ion-label>
           <ion-input type="text" formControlName="name"></ion-input>
         </ion-item>
       </form>
-    </div>
-    <div *ngIf="page === 2" style="margin-left: 10px; color: grey;">
-      Select group type:
-    </div>
-    <div *ngIf="page === 3">
-      <div class="default-background" [ngStyle]="{'background-image': 'url(' + (groupForm.value.background | background: userData.user._id) + ')'}" >
-        <div class="edit-icon"></div>
-        <div class="default-title">
-          {{groupForm.value.name}}
-        </div>
-        <div *ngIf="platform.is('cordova')" class="edit-icon" (click)="selectUploadFile($event)">
-          <ion-icon name="cog" color="primary"></ion-icon>
-        </div>
-        <div *ngIf="!platform.is('cordova')" class="edit-icon">
-          <label for="image"><ion-icon name="cog" color="primary"></ion-icon></label>
-          <input type="file" class="file-picker" name="image" id="image" (change)="selectUploadFile($event)" accept="image/*"/>
-        </div>
-      </div>
     </div>
   </ion-toolbar>
 </ion-header>
@@ -45,7 +31,7 @@
       <ion-spinner name="dots"></ion-spinner>
     </ion-row>
   </ion-grid>
-  <div *ngIf="page === 1">
+  <div>
     <ion-list-header>Friends</ion-list-header>
     <ion-list>
       <ion-item *ngFor="let person of listOfFriends; trackBy: customTrackBy" (click)="select(person)">
@@ -74,173 +60,11 @@
       <ion-infinite-scroll-content></ion-infinite-scroll-content>
     </ion-infinite-scroll>
   </div>
-  <div *ngIf="page === 2">
-    <ion-card (click)="selectGroupType('personal')">
-      <ion-card-header>
-        <ion-card-title class="ion-text-center">Personal Group</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-note color="grey">
-          A personal group is a private group chat. It does not belong to any community. You and your members can invite others to join.
-        </ion-note>
-      </ion-card-content>
-    </ion-card>
-    <ion-card (click)="selectGroupType('community')">
-      <ion-card-header>
-        <ion-card-title class="ion-text-center">Community Group</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-note color="grey">
-          A community group is a group that belongs to a community. It can be set as private or public. A community group is managed by its leader (you) and the community administrators.
-        </ion-note>
-      </ion-card-content>
-    </ion-card>
-  </div>
-  <div *ngIf="page === 3">
-    <form [formGroup]="groupForm">
-      <ion-list>
-        <ion-item-group>
-          <ion-item>
-            <ion-label position="stacked">{{title}} Name</ion-label>
-            <ion-input type="text" formControlName="name"></ion-input>
-          </ion-item>
-          <ion-item class="form-error-list" *ngIf="!groupForm.controls.name.pristine && !groupForm.controls.name.valid">
-            <p class="form-error" slot="end" *ngIf="!groupForm.controls.name.pristine && groupForm.controls.name.hasError('required')">
-              This is a required field.
-            </p>
-          </ion-item>
-        </ion-item-group>
-        <div *ngIf="type === 'community'">
-          <ion-item-group>
-            <ion-item-divider></ion-item-divider>
-            <ion-item>
-              <ion-label position="stacked">Community</ion-label>
-              <ion-select [interfaceOptions]="{cssClass: 'level-15'}" #church formControlName="churchId" (ionChange)="changeCommunity(church.value)">
-                <ion-select-option *ngFor="let church of churches" [value]="church._id">{{church.name}}</ion-select-option>
-              </ion-select>
-            </ion-item>
-            <ion-item class="form-error-list" *ngIf="!groupForm.controls.churchId.pristine && !groupForm.controls.churchId.valid">
-              <p class="form-error" slot="end" *ngIf="!groupForm.controls.churchId.pristine && groupForm.controls.churchId.hasError('required')">
-                This is a required field.
-              </p>
-            </ion-item>
-            <div *ngIf="groupForm.value.churchId !== ''">
-              <ion-item>
-                <ion-label>List in Discover Section? <ion-icon name="information-circle" (click)="explainDiscover()"></ion-icon></ion-label>
-                <ion-toggle formControlName="public_group"></ion-toggle>
-              </ion-item>
-            </div>
-            <ion-item>
-              <ion-label position="stacked">Description</ion-label>
-              <ion-textarea #textArea id="textArea" rows="8" class="detailstextarea" type="text" formControlName="details"></ion-textarea>
-            </ion-item>
-          </ion-item-group>
-          <ion-item-group>
-            <ion-item-divider>
-            </ion-item-divider>
-            <ion-item lines="none" (click)="showOptional = !showOptional">
-              <ion-label slot="start">Optional</ion-label>
-              <ion-button size="small" slot="end" fill="outline" *ngIf="!showOptional">Show More</ion-button>
-            </ion-item>
-            <div  *ngIf="showOptional">
-              <ion-item>
-                <ion-label position="stacked">Start Time</ion-label>
-                <ion-datetime displayFormat="MMM DD, YYYY HH:mm" pickerFormat="Z MMM DD, YYYY HH:mm" min="2017" max="2050-12-31" formControlName="beginAtISOString" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">End Time</ion-label>
-                <ion-datetime displayFormat="MMM DD, YYYY HH:mm" pickerFormat="Z MMM DD, YYYY HH:mm" min="2017" max="2050-12-31" formControlName="endAtISOString" [pickerOptions]="{cssClass: 'level-15'}"></ion-datetime>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">Day of the Week</ion-label>
-                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="meeting_day">
-                  <ion-select-option *ngFor="let day of days" [value]="day.name" [class.selected]="day.selected">{{day.name}}</ion-select-option>
-                </ion-select>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">Meeting Frequency</ion-label>
-                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="meeting_frequency">
-                  <ion-select-option *ngFor="let frequency of frequencies" [value]="frequency.name" [class.selected]="frequency.selected">{{frequency.name}}</ion-select-option>
-                </ion-select>
-              </ion-item>
-              <ion-item-divider></ion-item-divider>
-              <ion-item>
-                <ion-label position="stacked">Location/Room</ion-label>
-                <ion-input type="text" formControlName="location"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">Street</ion-label>
-                <ion-input type="text" formControlName="street"></ion-input>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">City</ion-label>
-                <ion-input type="text" formControlName="city"></ion-input>
-              </ion-item>
-              <ion-item class="form-error-list" *ngIf="!groupForm.controls.city.pristine && !groupForm.controls.city.valid">
-                <p class="form-error" slot="end" *ngIf="!groupForm.controls.city.pristine && groupForm.controls.city.hasError('required')">
-                  This is a required field.
-                </p>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">State</ion-label>
-                <ion-input type="text" formControlName="state"></ion-input>
-              </ion-item>
-              <ion-item class="form-error-list" *ngIf="!groupForm.controls.state.pristine && !groupForm.controls.state.valid">
-                <p class="form-error" slot="end" *ngIf="!groupForm.controls.state.pristine && groupForm.controls.state.hasError('required')">
-                  This is a required field.
-                </p>
-              </ion-item>
-              <ion-item>
-                <ion-label position="stacked">Country</ion-label>
-                <ion-select [interfaceOptions]="{cssClass: 'level-15'}" formControlName="country">
-                  <ion-select-option *ngFor="let country of countries" [value]="country.name" [class.selected]="country.selected">{{country.name}}</ion-select-option>
-                </ion-select>
-              </ion-item>
-              <ion-item class="form-error-list" *ngIf="!groupForm.controls.country.pristine && !groupForm.controls.country.valid">
-                <p class="form-error" slot="end" *ngIf="!groupForm.controls.country.pristine && groupForm.controls.country.hasError('required')">
-                  This is a required field.
-                </p>
-              </ion-item>
-            </div>
-
-          </ion-item-group>
-          <ion-item-group *ngIf="showOptional">
-            <ion-item-divider class="ion-text-wrap" *ngIf="smsPlan">
-              <ion-label>Communication Preference</ion-label>
-              <p>You can control chat message delivery to the Email and SMS members.</p>
-            </ion-item-divider>
-            <ion-item-divider class="ion-text-wrap" *ngIf="!smsPlan">
-              <ion-label>Communication Preference</ion-label>
-              <p>You can control chat message delivery to the Email members.</p>
-            </ion-item-divider>
-            <ion-item>
-              <ion-label class="ion-text-wrap">Email members will receive messages</ion-label>
-              <ion-toggle slot="end" formControlName="emailDisabled"></ion-toggle>
-            </ion-item>
-            <div *ngIf="smsPlan">
-              <ion-item>
-                <ion-label class="ion-text-wrap">SMS members will receive messages</ion-label>
-                <ion-toggle slot="end" formControlName="smsDisabled"></ion-toggle>
-              </ion-item>
-              <ion-item-divider class="ion-text-wrap">
-                <p>SMS keyword is a word of your choice for the text-to-join feature</p>
-              </ion-item-divider>
-              <ion-item lines="none">
-                <ion-label position="stacked">SMS Keyword</ion-label>
-                <ion-input type="text" formControlName="smsKeyword"></ion-input>
-              </ion-item>
-            </div>
-          </ion-item-group>
-        </div>
-      </ion-list>
-    </form>
-  </div>
 </ion-content>
 
 <ion-footer>
   <ion-toolbar>
-      <ion-button *ngIf="page === 1" expand="full" shape="round" size="medium" (click)="selectAppUsers()" color="primary" [disabled]="totalSelected < 1 || (totalSelected > 1 && chatForm.hasError('required'))">Select {{totalSelected}}&nbsp;<span *ngIf="totalSelected <= 1">Person</span><span *ngIf="totalSelected > 1">People</span></ion-button>
-      <ion-button *ngIf="page === 3" expand="full" shape="round" size="medium" (click)="createGroupChat()" color="primary">Create {{this.title}}</ion-button>
+      <ion-button expand="full" shape="round" size="medium" (click)="selectAppUsers()" color="primary" [disabled]="totalSelected < 1 || (totalSelected > 1 && chatForm.hasError('required'))">Select {{totalSelected}}&nbsp;<span *ngIf="totalSelected <= 1">Person</span><span *ngIf="totalSelected > 1">People</span></ion-button>
   </ion-toolbar>
 </ion-footer>
 
