e2e test changes: leave -> join

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -48,7 +48,7 @@
   <ion-toolbar id="permissionBar" *ngIf="showSpecialAccess && loadStatus && setupPermissionCompleted && (modalPage || !(router.url.includes('discover/home') || router.url.includes('manage/activity')))">
     <!--Invitation Section-->
     <ion-item-sliding side="end" *ngIf="(participant_type === 2) && token">
-      <ion-item (click)="acceptInvitation($event)" lines="none">
+      <ion-item id="accept-invitation" (click)="acceptInvitation($event)" lines="none">
         <ion-icon name="mail-open" slot="start" color="danger"></ion-icon>
         <div class="ion-text-wrap">
           <ion-label class="ion-margin-top">Accept Invitation</ion-label>
