add cursor: pointer to ion-title's
1.8.15 (2)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,9 @@
 app-root {
 
+  #main-menu-toolbar {
+    cursor: pointer;
+  }
+
   .split-pane-narrow {
     width: 70%;
     border-right: var(--border);
