--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@
             <ion-item [routerLink]="['/app/me']">
               <ion-icon slot="start" ios="person-sharp" md="person-sharp"></ion-icon>
               <ion-label>Me</ion-label>
-              <ion-badge [color]="userData.UIrestStatus === 'active' ? 'tertiary' : 'primary'" (click)="chatService.toggleRestStatus($event)" *ngIf="chatService && userData.user">
+              <ion-badge [color]="userData.UIrestStatus === 'active' ? 'tertiary' : 'primary'" (click)="clickRestToggle($event)" *ngIf="chatService && userData.user">
                 {{userData.UIrestStatus}}
               </ion-badge>
             </ion-item>
@@ -85,6 +85,13 @@
               <p style="font-size: 12px; color: var(--ion-color-dark)">Address: {{networkService.domain}}</p>
             </ion-item>
           </div>
+          <ion-item hidden>
+            <ion-label>Online Status</ion-label>
+            <ion-select #restSelect [(ngModel)]="userData.UIrestStatus" (ngModelChange)="chatService.toggleRestStatus($event)">
+              <ion-select-option value="active">Active</ion-select-option>
+              <ion-select-option value="away">Away</ion-select-option>
+            </ion-select>
+          </ion-item>
         </ion-list>
         <div style="height: 100px;" *ngIf="userData.developerModeClick < 3 && networkService.domain === 'https://server.restvo.com'" (click)="userData.developerModeClick = userData.developerModeClick + 1"></div>
       </ion-content>
