--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -545,7 +545,7 @@
           </ion-grid>
         </div>
       </div>
-      <div class="component" *ngIf="item === 10370"> <!--Plan-->
+      <div class="component" *ngIf="item === 10370"> <!--References-->
         <ion-slides class="program-slides" #plansSlides [options]="{grabCursor: true, updateOnWindowResize: true}">
           <ion-slide class="program-slide" *ngFor="let program of planModules; trackBy: customTrackBy">
             <ion-card class="program-card" (click)="openProgram($event, program)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
