join journey working
1.8.15 (2)

--- a/src/app/pages/feature/onboardfeature/onboardfeature.page.html
+++ b/src/app/pages/feature/onboardfeature/onboardfeature.page.html
@@ -1,4 +1,4 @@
-<ion-header no-border>
+<ion-header no-border id="onboarding-header">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="back()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
